Added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run caioaanolasco/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-078446047482"
+  bucket_folder: "docker-react"
+  on:
+    branch: "master"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_acess_key: "$AWS_SECRET_KEY"
