--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t caioaanolasco/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run caioaanolasco/docker-react npm run test -- --coverage
+  - docker run -e CI=true 0acf119792fe npm run test -- --watchAll=false
 
 deploy:
   provider: elasticbeanstalk
